Blog Post :: Recovering Quorum After Renaming Servers
Add 'About the Author' line

initial grammar/syntax review

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ ehthumbs.db
 # HUGO
 /public
 /resources
+.hugo_build.lock
 
 # Generated client pages
 content/download/*.md
@@ -26,4 +27,3 @@ npm-debug.log
 #IntelliJ IDEA
 .idea/
 *.iml
-
