--- a/data/events.toml
+++ b/data/events.toml
@@ -1,10 +1,18 @@
 [[events]]
-venue = "#ICYMI RethinkConn 2024"
-when = "January 2024"
-who = "Hosted by Byron Ruth, Synadia"
-what = "RethinkConn 2024 Virtual Dev Conference for NATS"
-where = "Virtual Event"
-ref = "https://www.youtube.com/playlist?list=PLgqCaaYodvKZfOFK3MMk5YnSO0cNj-QuQ"
+venue = "KubeCon EU 2024"
+when = "March 20th 16:30 - 17:05 CET"
+who = "Tomasz Pietrek & Jeremy Saenz, Synadia"
+what = "Distributed AI: Using NATS.io to Seamlessly Connect AI Applications from Cloud to Edge"
+where = "Paris, France"
+ref = "https://sched.co/1YhgF"
+
+[[events]]
+venue = "KubeCon EU 2024"
+when = "March 22nd 11:55 - 12:30 CET"
+who = "Cyril Becker & Vincent Bernaud, XBTO"
+what = "High Performance Multi Regions Messaging with NATS"
+where = "Paris, France"
+ref = "https://sched.co/1YeR8"
 
 # comment out to save
 #[[events]]
