add appscode logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -347,3 +347,8 @@ logo = "hpe.png"
 name = "Mattilsynet"
 home = "https://www.mattilsynet.no/en"
 logo = "mattilsynet.png"
+
+[companies.appscode]
+name = "Appscode"
+home = "https://appscode.com"
+logo = "appscode.png"
