--- a/data/addons.toml
+++ b/data/addons.toml
@@ -530,6 +530,15 @@ support = "Community"
 author = "Qaze"
 authorHome = "https://qaze.app/"
 
+[addons.nats-ui]
+name = "NATS UI"
+home = "https://github.com/DefactoTechnology/nats-ui"
+description = "A solution for displaying NATS Streaming data streams in a user-friendly interface"
+support = "Community"
+[[addons.nats-ui.authors]]
+author = "Defacto Technology"
+authorHome = "https://github.com/DefactoTechnology"
+
 #[addons.xxx]
 #name = ""
 #home = ""
