add proxus logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -347,3 +347,8 @@ logo = "appscode.png"
 name = "Valiant Distribution, Inc."
 home = "http://www.valiant.com.ph/"
 logo = "valiantdistributioninc.jpg"
+
+[companies.proxus]
+name = "Proxus"
+home = "https://www.proxus.io/"
+logo = "proxus.png"
