add marvelsoft logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -352,3 +352,8 @@ logo = "valiantdistributioninc.jpg"
 name = "Proxus"
 home = "https://www.proxus.io/"
 logo = "proxus.png"
+
+[companies.marvelsoft]
+name = "Marvelsoft"
+home = "https://marvelsoft.net/"
+logo = "marvelsoft.png"
