--- a/data/language.toml
+++ b/data/language.toml
@@ -71,11 +71,11 @@ author = "Employee Republic"
 link = "https://github.com/employeerepublic/"
 release_date = "2017-05-11"
 
-[language.c-sharp]
-name = ".NET C#"
-[[language.c-sharp.orgs]]
+[language.net]
+name = ".NET"
+[[language.net.orgs]]
 org = "nats-io"
-repo = "nats.net"
+repo = "nats.net.v2"
 supported = true
 streaming_support = true
 jetstream_support = true
@@ -83,15 +83,15 @@ author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.14.0"
 release_date = "2021-10-26"
-[[language.c-sharp.orgs]]
+[[language.netp.orgs]]
 org = "nats-io"
 repo = "nats.net"
 supported = true
 author = "NATS Authors"
-link = "https://github.com/nats-io/nats.net"
+link = "https://github.com/nats-io/nats.net.v2"
 release_version = "0.14.0"
 release_date = "2021-10-26"
-[[language.c-sharp.orgs]]
+[[language.net.orgs]]
 org = "danielwertheim"
 repo = "mynatsclient"
 supported = false
