add datasance logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -367,3 +367,8 @@ logo = "tenets.png"
 name = "i-flow"
 home = "https://i-flow.io/"
 logo = "iflow.png"
+
+[companies.datasance]
+name = "Datasance"
+home = "https://datasance.com/"
+logo = "datasance.png"
