Fix typo in Salt Lake City.

--- a/data/events.toml
+++ b/data/events.toml
@@ -3,7 +3,7 @@ venue = "KubeCon + CloudNativeCon North America 2024"
 when = "Friday November 15, 2:55pm MST"
 who = "Byron Ruth & Kevin Hoffman, Synadia"
 what = "Nothing but NATS: Going Beyond Cloud Native"
-where = "Salt Lat City, Utah"
+where = "Salt Lake City, Utah"
 ref = "https://sched.co/1hoyU"
 
 
