--- a/data/events.toml
+++ b/data/events.toml
@@ -6,6 +6,13 @@ what = "Nothing but NATS: Going Beyond Cloud Native"
 where = "Salt Lake City, Utah"
 ref = "https://sched.co/1hoyU"
 
+venue = "NATS user in SoCal? Join us!"
+when = "Friday October 18, 4:00pm PST"
+who = "NATS Maintainers + Team Synadia"
+what = "Pizza, Wine, & Connectivity: Celebrating the Nomadic App Revolution"
+where = "Venice Beach, Los Angeles"
+ref = "https://lu.ma/ppcazde3"
+
 
 # venue = "ICYMI"
 # when = "KubeCon EU 2024"
