--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -53,16 +53,16 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.12.0
+  version_num: 2.5.1
   release_notes: |
-    Release 0.12.0 on February 26, 2021.
+    Release 2.5.1 on October 16, 2024.
   github:
     - user: nats-io
       repo: nats.net
       link: https://github.com/nats-io/nats.net
   links:
     - name: NuGet
-      url:  https://www.nuget.org/packages/NATS.Client
+      url:  https://www.nuget.org/packages/NATS.Net
 
 - name: Elixir
   type: nats-client
