add Sales Mania logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -393,3 +393,8 @@ logo = "eternalempires.png"
 name = "Oktopus"
 home = "https://oktopus.app.br/controller"
 logo = "oktopus.png"
+
+[companies.sales_mania]
+name = "Sales Mania"
+home = "https://salesmania.id/"
+logo = "salesmania.jpeg"
