--- a/data/events.toml
+++ b/data/events.toml
@@ -1,5 +1,5 @@
 [[events]]
-venue = "KubeCon + CloudNativeCon EU 2025"
+venue = "RethinkConn 2025"
 when = "March 20th, 10am PT"
 who = "Synadia and the NATS Community"
 what = "The 2.11 release, Orbit, Connectors, the NATS roadmap, and much more"
