add sveltos logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -408,3 +408,8 @@ logo = "octotronic.svg"
 name = "Cybus"
 home = "https://cybus.io/"
 logo = "cybus.png"
+
+[companies.sveltos]
+name = "Sveltos"
+home = "https://sveltos.projectsveltos.io/"
+logo = "sveltos.png"
