chore: updated the url of eternalempires

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -386,7 +386,7 @@ logo = "bosach.png"
 
 [companies.eternal_empires]
 name = "Eternal Empires"
-home = "https://github.com/EternalEmpires"
+home = "https://eternalempires.net/"
 logo = "eternalempires.png"
 
 [companies.oktopus]
