add Invendor logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -438,3 +438,8 @@ logo = "iCube.png"
 name = "Goosey"
 home = "https://goosey.org/"
 logo = "goosey.svg"
+
+[companies.invendor]
+name = "Invendor"
+home = "https://invendor.com"
+logo = "invendor.jpg"
