--- a/data/companies.toml
+++ b/data/companies.toml
@@ -443,3 +443,8 @@ logo = "goosey.svg"
 name = "Invendor"
 home = "https://invendor.com"
 logo = "invendor.jpg"
+
+[companies.noula]
+name = "NouLa"
+home = "https://nou-la.com/"
+logo = "noula.png"
