add foodhub logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -458,3 +458,8 @@ logo = "groww.webp"
 name = "blueJ"
 home = "https://bluej.com/"
 logo = "bluej.svg"
+
+[companies.foodhub]
+name = "FoodHub"
+home = "https://foodhub.com/"
+logo = "foodhub.png"
