add axiros logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -463,3 +463,8 @@ logo = "bluej.svg"
 name = "FoodHub"
 home = "https://foodhub.com/"
 logo = "foodhub.png"
+
+[companies.axiros]
+name = "Axiros GmbH"
+home = "https://www.axiros.com/"
+logo = "axiros.png"
