add pfoundation logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -468,3 +468,8 @@ logo = "sopho.png"
 name = "BrightSign"
 home = "https://brightsign.biz"
 logo = "brightsign.png"
+
+[companies.pfoundation]
+name = "P Foundation"
+home = "https://p.foundation/"
+logo = "PFoundation.svg"
