--- a/data/companies.toml
+++ b/data/companies.toml
@@ -488,3 +488,13 @@ logo = "serviceradar.svg"
 name = "Marble Technologies"
 home = "https://www.seemarble.com/"
 logo = "marble.svg"
+
+[companies.anydb]
+name = "AnyDB"
+home = "https://www.anydb.com/"
+logo = "anyDB.png"
+
+[companies.siden]
+name = "Siden.io"
+home = "https://siden.io/"
+logo = "siden.png"
